contact updates, biography

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 
         <main>
             <div class="image-container">
-                <img src="/resources/team40.webp" alt="Mclifty Team"/>
+                <img src="/resources/team.webp" alt="Mclifty Team"/>
                 <div class="overlay-text">About Us</div>
             </div>
 
@@ -51,7 +51,7 @@
                 <div class = "icon-container">
                     <i class="fa-solid fa-dollar-sign"></i>
 
-                    <span>Set Pricing and Free Quote</span> 
+                    <span>Set Pricing and No Hidden Fees</span> 
                 </div>
 
                 <div class = "icon-container">
@@ -89,8 +89,13 @@
                 <div id="matt-text">
                     <h2>Matt Baker</h2>
                     <h5>Owner/Master Electrician</h5>
-                    <p>Matt is a master electrician with over 20 years of experience across a wide range of projects. 
-                        His commitment to excellence and dedication to delivering top-tier service ensures that every job meets the highest standards of quality and customer satisfaction.</p>
+                    <p>Born in Salt Lake City and raised in American Fork, Matt has been part of the local community his whole life. 
+                        He pursued his passion for electrical work early on, completing his journeyman schooling in 2012 and earning his master electrician’s license in 2020. 
+                        With nearly 20 years of experience, he founded McLifty in 2021 to provide reliable, high-quality electrical services with the freedom to put customers first.
+                    </p>
+                    <p>
+                        When he’s not on the job, Matt enjoys working with fireworks, a perfect blend of his passion for energy and craftsmanship.
+                    </p>
                 </div>
             </div>
 
@@ -101,7 +106,7 @@
                         Out team of skilled electricians is responsible for routine maintenance, repairs, and the installation of electrical infrastructure in a variety of campus facilities, from classrooms, lecture halls, and labs to the Wilkinson Student Center and various athletic complexes. 
                         The partnership between McLifty Electric and BYU reflects a long-standing commitment to integrity and reliability.</p>
                 </div>
-                <img id="byu-pic" src="/resources/byu.jpg" alt="BYU"/>
+                <img id="byu-pic" src="/resources/BYU copy.webp" alt="BYU"/>
             </div>
         
         </main>    
@@ -110,7 +115,7 @@
             <div id="footer" class="bg-dark text-white container-fluid d-flex align-items-center py-.5">
                 <img src="/resources/mclifty_logo_1.png" alt="Mclifty Logo" width="65" height="65" style="border-radius: 50%;"/>
                 <ul style="list-style-type: none;">
-                    <li id = "phone">Phone: 555-555-5555</li>
+                    <li id = "phone">Phone: (801) 369-2625</li>
                     <li>Email: matthew.baker@mclifty.com</li>
                     <li>Address: Provo, UT</li>
                     <li><a href="contact.html"> Contact</a></li>
