--- a/residential.html
+++ b/residential.html
@@ -38,7 +38,7 @@
 
         <main>
             <div class="image-container">
-                <img src="/resources/house2.webp" alt="Residential Houses"/>
+                <img src="/resources/house.webp" alt="Residential Houses"/>
                 <div class="overlay-text">Residential</div>
             </div>
 
@@ -103,7 +103,7 @@
             <div id="footer" class="bg-dark text-white container-fluid d-flex align-items-center py-.5">
                 <img src="/resources/mclifty_logo_1.png" alt="Mclifty Logo" width="65" height="65" style="border-radius: 50%;"/>
                 <ul style="list-style-type: none;">
-                    <li id = "phone">Phone: 555-555-5555</li>
+                    <li id = "phone">Phone: (801) 369-2625</li>
                     <li>Email: matthew.baker@mclifty.com</li>
                     <li>Address: Provo, UT</li>
                     <li><a href="contact.html"> Contact</a></li>
