form email update, picture name change

--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                         Out team of skilled electricians is responsible for routine maintenance, repairs, and the installation of electrical infrastructure in a variety of campus facilities, from classrooms, lecture halls, and labs to the Wilkinson Student Center and various athletic complexes. 
                         The partnership between McLifty Electric and BYU reflects a long-standing commitment to integrity and reliability.</p>
                 </div>
-                <img id="byu-pic" src="/resources/BYU copy.webp" alt="BYU"/>
+                <img id="byu-pic" src="/resources/BYU.webp" alt="BYU"/>
             </div>
         
         </main>    
