--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                 </div>
     
                 <div id="contact-form-box">
-                    <form id="contact-form" action="https://formsubmit.co/0f78c51204831b491f653679b4392914" method="POST">
+                    <form id="contact-form" action="https://formsubmit.co/matthew.baker@mclifty.com" method="POST">
                         <div id="form-title">Send Us A Message!</div>
                         
                         <label for="name">Name:</label>
