--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
                 <div id="byu-text">
                     <h2>BYU</h2>
                     <p>McLifty Electric is a trusted contractor for Brigham Young University (BYU), providing electrical services to many of the university's buildings across its campus. 
-                        Out team of skilled electricians is responsible for routine maintenance, repairs, and the installation of electrical infrastructure in a variety of campus facilities, from classrooms, lecture halls, and labs to the Wilkinson Student Center and various athletic complexes. 
+                        Our team of skilled electricians is responsible for routine maintenance, repairs, and the installation of electrical infrastructure in a variety of campus facilities, from classrooms, lecture halls, and labs to the Wilkinson Student Center and various athletic complexes. 
                         The partnership between McLifty Electric and BYU reflects a long-standing commitment to integrity and reliability.</p>
                 </div>
                 <img id="byu-pic" src="/resources/BYU.webp" alt="BYU"/>
