--- a/residential.html
+++ b/residential.html
@@ -62,7 +62,7 @@
                     <div class="service-category">
                         <i class="fa-solid fa-lightbulb"></i>
                         <h3>Improved Lighting</h3>
-                        <p>We offer improved lighting solutions for any purpose in your home. From replacing old lights with cost-efficient LEDs to installing new light fixtures we can help. </p>
+                        <p>We offer improved lighting solutions for any purpose in your home. From replacing old lights with cost-efficient LEDs to installing new light fixtures, we can help. </p>
                     </div>
                 
                     <div class="service-category">
