--- a/about.html
+++ b/about.html
@@ -99,14 +99,15 @@
                 </div>
             </div>
 
-            <div id="byu-div">
-                <div id="byu-text">
-                    <h2>BYU</h2>
-                    <p>McLifty Electric is a trusted contractor for Brigham Young University (BYU), providing electrical services to many of the university's buildings across its campus. 
-                        Our team of skilled electricians is responsible for routine maintenance, repairs, and the installation of electrical infrastructure in a variety of campus facilities, from classrooms, lecture halls, and labs to the Wilkinson Student Center and various athletic complexes. 
-                        The partnership between McLifty Electric and BYU reflects a long-standing commitment to integrity and reliability.</p>
+            <div id="about-values-div">
+                <div id="about-values-text">
+                    <h2>Our Promise</h2>
+                    <p>At McLifty Electric, we go beyond fixing wires and circuits — we focus on building lasting trust with every customer. 
+                    Our team is dedicated to providing safe, efficient, and high-quality electrical solutions for both homes and businesses. 
+                    Whether it’s a small repair, a full installation, or an ongoing project, we bring the same commitment to honesty, 
+                    reliability, and excellence every time. With McLifty, you can feel confident knowing your project is in expert hands.</p>
                 </div>
-                <img id="byu-pic" src="/resources/BYU.webp" alt="BYU"/>
+                <img id="values-pic" src="/resources/work.webp" alt="Electrical Work"/>
             </div>
         
         </main>    
