--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
                     Whether it’s a small repair, a full installation, or an ongoing project, we bring the same commitment to honesty, 
                     reliability, and excellence every time. With McLifty, you can feel confident knowing your project is in expert hands.</p>
                 </div>
-                <!-- <img id="values-pic" src="/resources/work.webp" alt="Electrical Work"/> -->
+                <img id="logo-pic" src="/resources/mclifty_logo_1.webp" alt="Mclifty Logo"/>
             </div>
         
         </main>    
