--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="McLifty Electric provides expert residential and commercial electrical services in Utah. Licensed, insured, and dedicated to quality and safety." />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
         <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-        <title>Home-Mclifty Electrical</title>
+        <title>McLifty Electric | Trusted Electricians in Utah County</title>
         <link rel="icon" href="/resources/mclifty_logo_1.png" style="border-radius: 50%;"/>
         <link rel="stylesheet" href="main.css" />
         <link rel="stylesheet" href="index.css" />
@@ -17,7 +18,7 @@
     <body>
         <header class="container-fluid p-0">
             <nav id="navid" class="navbar navbar-expand-md navbar-light bg-light justify-content-between">
-                <a id = "logo" href="index.html"><img src="/resources/mclifty_logo_1.JPG" alt="Mclifty Logo" width="65" height="65" style="border-radius: 50%"/></a>
+                <a id = "logo" href="index.html"><img src="/resources/mclifty_logo_1.JPG" alt="McLifty Electric company logo" width="65" height="65" style="border-radius: 50%"/></a>
                 <a id ="logo-text" href="index.html"><h3>McLifty Electric</h3></a>
             
             <button id = "navbutton" class="navbar-toggler navbar-expand-md" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,7 +40,7 @@
 
         <main>
             <div class="image-container">
-                <img src="/resources/yellow_man.webp" alt="Electrician Working"/>
+                <img src="/resources/yellow_man.webp" alt="Electrician performing professional electrical work in Utah"/>
                 <div class="overlay-text">Professional Electrical Work You Can Trust</div>
             </div>
             <h2>The Mclifty Experience</h2>
@@ -89,7 +90,7 @@
                         <li>No toxic material and less of a carbon footprint!</li>
                     </ul>   
                 </div>
-                <img id="led-pic" src="/resources/LED.webp" alt="led lights"/>
+                <img id="led-pic" src="/resources/LED.webp" alt="Energy-efficient LED lighting installation"/>
             </div>
 
             <div id="map-container">
@@ -101,7 +102,7 @@
         
         <footer>
             <div id="footer" class="bg-dark text-white container-fluid d-flex align-items-center py-.5">
-                <img src="/resources/mclifty_logo_1.png" alt="Mclifty Logo" width="65" height="65" style="border-radius: 50%;"/>
+                <img src="/resources/mclifty_logo_1.png" alt="McLifty Electric logo footer" width="65" height="65" style="border-radius: 50%;"/>
                 <ul style="list-style-type: none;">
                     <li id = "phone">Phone: (801) 369-2625</li>
                     <li>Email: matthew.baker@mclifty.com</li>
