--- a/about.html
+++ b/about.html
@@ -4,9 +4,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Learn about McLifty Electric, a locally owned electrical company in Provo, Utah, founded by Master Electrician Matt Baker. Reliable, honest, and customer-focused." />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <title>About-Mclifty Electrical</title>
+        <title>About McLifty Electric | Licensed Electricians in Utah</title>
         <link rel="icon" href="/resources/mclifty_logo_1.png" style="border-radius: 50%;"/>
         <link rel="stylesheet" href="main.css" />
         <link rel="stylesheet" href="about.css" />
@@ -15,7 +16,7 @@
     <body>
         <header class="container-fluid p-0">
             <nav class="navbar navbar-expand-md navbar-light bg-light">
-                <a id = "logo" href="index.html"><img src="/resources/mclifty_logo_1.JPG" alt="Mclifty Logo" width="65" height="65" style="border-radius: 50%"/></a>
+                <a id = "logo" href="index.html"><img src="/resources/mclifty_logo_1.JPG" alt="McLifty Electric company logo" width="65" height="65" style="border-radius: 50%"/></a>
                 <a id ="logo-text" href="index.html"><h3>McLifty Electric</h3></a>
 
             <button id = "navbutton" class="navbar-toggler navbar-expand-md" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +38,7 @@
 
         <main>
             <div class="image-container">
-                <img src="/resources/team.webp" alt="Mclifty Team"/>
+                <img src="/resources/team.webp" alt="McLifty Electric team provides trusted electrical services"/>
                 <div class="overlay-text">About Us</div>
             </div>
 
@@ -85,7 +86,7 @@
             </div>
 
             <div id="matt-div">
-                <img id="matt-pic" src="/resources/matt.webp" alt="Matt Baker"/>
+                <img id="matt-pic" src="/resources/matt.webp" alt="Matt Baker, owner and master electrician at McLifty Electric"/>
                 <div id="matt-text">
                     <h2>Matt Baker</h2>
                     <h5>Owner/Master Electrician</h5>
@@ -104,14 +105,14 @@
                     Whether it’s a small repair, a full installation, or an ongoing project, we bring the same commitment to honesty, 
                     reliability, and excellence every time. With McLifty, you can feel confident knowing your project is in expert hands.</p>
                 </div>
-                <img id="logo-pic" src="/resources/mclifty_logo_transparent.webp" alt="Mclifty Logo"/>
+                <img id="logo-pic" src="/resources/mclifty_logo_transparent.webp" alt="McLifty Electric logo in white and yellow"/>
             </div>
         
         </main>    
         
         <footer>
             <div id="footer" class="bg-dark text-white container-fluid d-flex align-items-center py-.5">
-                <img src="/resources/mclifty_logo_1.png" alt="Mclifty Logo" width="65" height="65" style="border-radius: 50%;"/>
+                <img src="/resources/mclifty_logo_1.png" alt="McLifty Electric logo footer" width="65" height="65" style="border-radius: 50%;"/>
                 <ul style="list-style-type: none;">
                     <li id = "phone">Phone: (801) 369-2625</li>
                     <li>Email: matthew.baker@mclifty.com</li>
