--- a/residential.html
+++ b/residential.html
@@ -4,10 +4,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="McLifty Electric offers safe, reliable, and high-quality residential electrical services in Utah County. From repairs to full installations, we’ve got you covered." />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <title>Residential-Mclifty Electrical</title>
+        <title>Residential Electricians in Utah | McLifty Electric</title>
         <link rel="icon" href="/resources/mclifty_logo_1.png" style="border-radius: 50%;"/>
         <link rel="stylesheet" href="main.css" />
         <link rel="stylesheet" href="com-res.css" />
@@ -16,7 +17,7 @@
     <body>
         <header class="container-fluid p-0">
             <nav class="navbar navbar-expand-md navbar-light bg-light">
-                <a id = "logo" href="index.html"><img src="/resources/mclifty_logo_1.JPG" alt="Mclifty Logo" width="65" height="65" style="border-radius: 50%"/></a>
+                <a id = "logo" href="index.html"><img src="/resources/mclifty_logo_1.JPG" alt="McLifty Electric company logo" width="65" height="65" style="border-radius: 50%"/></a>
                 <a id ="logo-text" href="index.html"><h3>McLifty Electric</h3></a>
 
             <button id = "navbutton" class="navbar-toggler navbar-expand-md" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +39,7 @@
 
         <main>
             <div class="image-container">
-                <img src="/resources/house.webp" alt="Residential Houses"/>
+                <img src="/resources/house.webp" alt="Residential homes with reliable electrical service in Utah"/>
                 <div class="overlay-text">Residential</div>
             </div>
 
@@ -101,7 +102,7 @@
         
         <footer>
             <div id="footer" class="bg-dark text-white container-fluid d-flex align-items-center py-.5">
-                <img src="/resources/mclifty_logo_1.png" alt="Mclifty Logo" width="65" height="65" style="border-radius: 50%;"/>
+                <img src="/resources/mclifty_logo_1.png" alt="McLifty Electric logo footer" width="65" height="65" style="border-radius: 50%;"/>
                 <ul style="list-style-type: none;">
                     <li id = "phone">Phone: (801) 369-2625</li>
                     <li>Email: matthew.baker@mclifty.com</li>
