--- a/commercial.html
+++ b/commercial.html
@@ -57,14 +57,14 @@
                   
                     <div class="service-category">
                         <i class="fa-solid fa-wrench"></i>
-                        <h3>Electrical System Design & Installation</h3>
-                        <p>We provide full electrical system design and installation for new commercial buildings, including wiring, lighting, and panel systems. We tailor our solutions to meet the specific needs of your business.</p>
+                        <h3>Electrical System Installation</h3>
+                        <p>We provide full electrical system installation for new commercial buildings, including wiring, lighting, and panel systems. We tailor our solutions to meet the specific needs of your business.</p>
                     </div>
                   
                     <div class="service-category">
                         <i class="fa-solid fa-lightbulb"></i>
                         <h3>Lighting Solutions</h3>
-                        <p>We design and install energy-efficient lighting systems for commercial spaces, including office buildings, retail stores, and parking lots. We ensure your lighting is functional and cost-effective.</p>
+                        <p>We install energy-efficient lighting systems for commercial spaces, including office buildings, retail stores, and parking lots. We ensure your lighting is functional and cost-effective.</p>
                     </div>
 
                     <div class="service-category">
