--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,10 @@
         <main>
             <div id="contact-box">
                 <div id="contact-info">
-                    <h1>Call Text or Email Us</h1>
-                    <h3>Phone (Call or Text)</h3>
+                    <h1>Contact Our Team</h1> 
+                    <h3>Phone</h3>
                     <i class="fa-solid fa-phone"></i>
-                    <a href="tel:+18013692625" id="call-button">(801) 369-2625</a>
+                    <a style="text-decoration: none;" href="#" onclick="document.getElementById('name').focus(); return false;"> Fill out form to request a call</a>
 
                     <h3>Email</h3>
                     <i class="fa-solid fa-envelope"></i>
@@ -87,8 +87,7 @@
         <footer>
             <div id="footer" class="bg-dark text-white container-fluid d-flex align-items-center py-.5">
                 <img src="/resources/mclifty_logo_1.png" alt="McLifty Electric logo footer" width="65" height="65" style="border-radius: 50%;"/>
-                <ul style="list-style-type: none;">
-                    <li id = "phone">Phone: (801) 369-2625</li>
+                <ul style="list-style-type: none; margin-top: 10px;">
                     <li>Email: matthew.baker@mclifty.com</li>
                     <li>Address: Provo, UT</li>
                     <li><a href="contact.html"> Contact</a></li>
