--- a/residential.html
+++ b/residential.html
@@ -103,8 +103,7 @@
         <footer>
             <div id="footer" class="bg-dark text-white container-fluid d-flex align-items-center py-.5">
                 <img src="/resources/mclifty_logo_1.png" alt="McLifty Electric logo footer" width="65" height="65" style="border-radius: 50%;"/>
-                <ul style="list-style-type: none;">
-                    <li id = "phone">Phone: (801) 369-2625</li>
+                <ul style="list-style-type: none; margin-top: 10px;">
                     <li>Email: matthew.baker@mclifty.com</li>
                     <li>Address: Provo, UT</li>
                     <li><a href="contact.html"> Contact</a></li>
